--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/generate.js": {
-      "runtime": "nodejs18.x"
+      "runtime": "vercel-nodejs@18.0.0"
     }
   }
 }
